<?xml version="1.0"?>
<package format="2">
  <name>tesseract_command_language</name>
  <version>0.0.0</version>
  <description>The Tesseract Command Language package</description>
  <author email="levi.armstrong@swri.org">Levi Armstrong</author>
  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>

  <depend>libconsole-bridge-dev</depend>
  <depend>tesseract_common</depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>

  <build_depend>libboost-serialization-dev</build_depend>
  <exec_depend>libboost-serialization</exec_depend>

  <test_depend>gtest</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
