<?xml version="1.0"?>
<package format="2">
  <name>tesseract_examples</name>
  <version>0.21.5</version>
  <description>This package contains examples related to this trajopt_ros repository.</description>

  <maintainer email="levi.armstrong@gmail.com">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <license>BSD 2-Clause</license>
  <author >Levi Armstrong</author>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>

  <build_depend>ros_industrial_cmake_boilerplate</build_depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>tesseract_collision</depend>
  <depend>tesseract_command_language</depend>
  <depend>tesseract_motion_planners</depend>
  <depend>tesseract_task_composer</depend>
  <depend>tesseract_kinematics</depend>
  <depend>tesseract_environment</depend>
  <depend>tesseract_scene_graph</depend>
  <depend>tesseract_common</depend>
  <depend>tesseract_support</depend>
  <depend>trajopt_sqp</depend>
  <depend>trajopt_ifopt</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
