<?xml version="1.0"?>
<package format="2">
  <name>tesseract_motion_planners</name>
  <version>0.1.0</version>
  <description>This contains tesseract planners</description>

  <maintainer email="levi.armstrong@swri.org">Levi Armstrong</maintainer>
  <license>Apache 2.0</license>
  <author >Levi Armstrong</author>

  <!-- Following recommendations of REP 136 -->
  <buildtool_depend>cmake</buildtool_depend>

  <depend>tesseract_common</depend>
  <depend>tesseract_environment</depend>
  <depend>tesseract_kinematics</depend>
  <depend>tesseract_command_language</depend>
  <build_depend>ros_industrial_cmake_boilerplate</build_depend>

  <depend>descartes_light</depend>
  <build_depend>eigen</build_depend>
  <build_export_depend>eigen</build_export_depend>
  <depend>libconsole-bridge-dev</depend>
  <depend>ompl</depend>
  <depend>trajopt</depend>
  <depend>trajopt_ifopt</depend>
  <depend>trajopt_sco</depend>
  <depend>trajopt_sqp</depend>

  <test_depend>gtest</test_depend>
  <test_depend>tesseract_support</test_depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
